# vrpg_oficial

./: .clippy.toml  .cursorrules  .editorconfig  .eslintrc.json  .gitignore  .prettierrc.json  .rulebook  AGENTS.md  AGENTS.md.backup-2025-11-28T03-20-54-183Z  Cargo.toml  MCP_FINAL_STATUS.md  MCP_MANUAL_SETUP.md  MCP_SETUP.md  MCP_STATUS.md  README.md  README_GPU_SETUP.md  SERVERS_README.md  ServersLauncher.cs  cobertura.xml  context7-mcp.py  create_all_monsters.ps1  env.example  failed-files.json  generate_all_detailed_prompts.ps1  generate_detailed_prompts.py  generate_goblin_final.mjs  generate_goblin_sprites.mjs  generate_sprites.js  generate_sprites.mjs  generate_sprites.py  index.html  insertion-log-20251122-220937.txt  insertion-log.txt  list_models.mjs  mcp_servers.json  package-lock.json  package.json  requirements-mcp.txt  rustfmt.toml  servers.bat  (+14 more)
src/asr-service/: Cargo.toml
src/asr-service/scripts/: whisper_transcribe.py
src/asr-service/src/: error.rs  lib.rs  server.rs  vad.rs  whisper.rs
src/game-engine/: Cargo.toml
src/game-engine/src/: actor.rs  effect.rs  error.rs  lib.rs  scene.rs  session.rs  turn.rs
src/infra-runtime/: Cargo.toml
src/infra-runtime/src/: config.rs  error.rs  health.rs  lib.rs  manager.rs
src/llm-core/: Cargo.toml
src/llm-core/src/: bridge_phrases.rs  bridge_phrases_tests.rs  error.rs  inference.rs  inference_1_5b_tests.rs  lib.rs  persona.rs  server.rs
src/memory-service/: Cargo.toml
src/memory-service/src/: error.rs  lexum.rs  lib.rs  nexus.rs  server.rs  store.rs  vectorizer.rs
src/orchestrator/: Cargo.toml
src/orchestrator/src/: communication.rs  error.rs  fsm.rs  intent_router.rs  lib.rs  llm_client.rs  orchestrator.rs  pipeline.rs
src/orchestrator/src/cache/: game_state_cache.rs  lore_cache.rs  mod.rs  scene_context_cache.rs
src/orchestrator/src/intent/: actor_stats.rs  executor.rs  mod.rs  parser.rs  types.rs
src/orchestrator/src/pipeline/: context_14b.rs  flow.rs  objective_responses.rs  simple_rule_query.rs  trigger.rs
src/orchestrator/src/services/: memory.rs  mod.rs  rules5e.rs  synap_client.rs  tts.rs
src/orchestrator/src/session/: mod.rs  persistence.rs
src/orchestrator/tests/: context_14b_integration_test.rs  context_14b_test.rs  fsm_test.rs  game_state_cache_test.rs  integration_test.rs  intent_parser_test.rs  intent_router_test.rs  lore_cache_test.rs  objective_responses_test.rs  pipeline_flow_test.rs  pipeline_integration_test.rs  pipeline_performance_test.rs  pipeline_regression_test.rs  pipeline_state_integration_test.rs  pipeline_state_test.rs  scene_context_cache_test.rs  session_persistence_test.rs  session_test.rs  simple_rule_query_test.rs  trigger_1_5b_integration_test.rs  trigger_1_5b_test.rs
src/rules5e-service/: Cargo.toml
src/rules5e-service/src/: ability.rs  ability_scores.rs  attack.rs  condition.rs  cr_xp.rs  damage.rs  dice.rs  error.rs  lib.rs  server.rs  skills.rs  spells.rs  weapons.rs
src/rules5e-service/tests/: integration_test.rs  performance_test.rs  unit_test.rs
src/rules5e-service/tests/integration/: http_test.rs
src/rules5e-service/tests/performance/: latency_test.rs
src/rules5e-service/tests/unit/: ability_check_test.rs  ability_scores_test.rs  attack_test.rs  condition_test.rs  cr_xp_test.rs  damage_test.rs  dice_roll_test.rs  saving_throw_test.rs
src/service-manager/: Cargo.toml
src/service-manager/src/: main.rs
src/tts-service/: -  ANALISE_OTIMIZACAO_LATENCIA.md  CAUSAS_POSSIVEIS.md  CHANGELOG_FIXES.md  COMO_INSTALAR_ESPEAK_WINDOWS.md  COMPARACAO_PYTHON_RUST.md  CORRECAO_ESPACOS.md  CORRECOES_APLICADAS.md  CORRECOES_AUDIO.md  CORRECOES_FINAIS_AUDIO.md  Cargo.toml  DIAGNOSTICO_AUDIO.md  DIAGNOSTICO_AUDIO_ININTELIGIVEL.md  DIAGNOSTICO_COMPLETO.md  DIAGNOSTICO_RESUMO.md  DIAGNOSTICO_VELOCIDADE.md  ESTRATEGIAS_OTIMIZACAO_LATENCIA.md  GPU_FALLBACK_EXPLICACAO.md  IMPLEMENTACAO_INTERJECOES.md  INSTALAR_CUDNN.md  INSTALAR_ESPEAK.md  INSTRUCOES_REINICIAR.md  INTEGRACAO_INTERJECOES_COMPLETA.md  INVESTIGACAO_AUDIO_ININTELIGIVEL.md  INVESTIGACAO_CONTINUA.md  INVESTIGACAO_PROFUNDA.md  MUDANCAS_VELOCIDADE.md  PESQUISA_FORUNS_DETALHADA.md  PLANO_XTTS_MIGRATION.md  PONTOS_ENTRADA_INTERJECOES.md  PROBLEMA_FONEMAS_SOBREPOSTOS.md  PROBLEMA_MODELO_GB_VS_US.md  PROXIMOS_PASSOS.md  README_PHONEMIZER.md  README_SOVITS_INTEGRATION.md  REFATORACAO_STREAMING.md  RESULTADO_TESTE.md  RESUMO_CORRECOES_APLICADAS.md  RESUMO_CUDNN.md  RESUMO_INVESTIGACAO.md  (+34 more)
src/tts-service/config/: interjections.yaml
src/tts-service/docs/: INTERJECTIONS_SYSTEM.md  INTERJECTIONS_SYSTEM_COMPLETE.md
src/tts-service/scripts/: sovits_convert.py
src/tts-service/src/: audio_buffer.rs  audio_utils.rs  error.rs  gpu_config.rs  gpu_detector.rs  interjections.rs  lib.rs  metrics.rs  phonemizer.rs  pipeline.rs  prebuffer_manager.rs  semantic_chunker.rs  server.rs  streaming.rs  streaming_server.rs  tts_profile.rs  voice.rs  voice_intent.rs  voice_profiles.rs  xtts.rs
src/tts-service/tests/: README_BENCHMARKS.md  README_SOVITS_TESTS.md  README_XTTS_TESTS.md  test_hello_world_xtts.rs  test_hello_world_xtts_stub.rs  test_xtts_long_text.rs
src/tts-service/tests/benchmarks/: benchmark_suite.rs  mod.rs  pipeline_latency_benchmark.rs
src/tts-service/tests/integration/: hello_world_sovits_test.rs  pipeline_test.rs  streaming_pipeline_test.rs  xtts_integration_test.rs  xtts_pipeline_fallback_test.rs
src/tts-service/tests/performance/: latency_test.rs
src/tts-service/tests/production/: stress_test.rs
src/tts-service/tests/quality/: audio_quality_test.rs
src/tts-service/tests/scripts/: ANALISE_PROCESSO_AUDIO.md  CHANGELOG_VOZES.md  CONCLUSAO_DIAGNOSTICO.md  CONTROLE_GPU_ADAPTATIVO.md  DESCOBERTA_RAW.md  DIAGNOSTICO_FINAL.md  LIMPEZA_CONCLUIDA.md  README.md  REGISTRO_FINAL_RAW.md  RESULTADO_BENCHMARK_CPU_VS_GPU.md  RESULTADO_TESTE_10X.md  SOLUCAO_CHIADO_METALICO.md  SOLUCAO_SAMPLE_RATE.md  VALIDACAO_AUDIO.md  analyze_audio_quality.py  analyze_benchmark_files.py  analyze_dataset_quality.py  compare_benchmarks.py  compare_benchmarks_detailed.py  create_clean_xtts_embedding.py  create_xtts_embedding.py  (+39 more)
(+2672 files in other folders)
