[workspace]
members = [
    "src/orchestrator",
    "src/llm-core",
    "src/asr-service", 
    "src/tts-service",
    "src/rules5e-service",
    "src/memory-service",
    "src/game-engine",
    "src/infra-runtime",
    "src/service-manager"
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["VRPG Team <team@vrpg-client.com>"]
license = "MIT"
homepage = "https://vrpg-client.com"
repository = "https://github.com/vrpg-team/vrpg-client"
description = "Virtual RPG Engine with Local AI - Complete offline D&D 5e experience"
keywords = ["rpg", "dnd", "ai", "local-llm", "voice"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Audio processing
cpal = "0.15"
hound = "3.5"
rubato = "0.14"

# AI and ML
# NOTE: candle temporarily disabled - version 0.3 has compatibility issues with rand_distr
# Will be enabled when implementing LLM Core with updated versions
# candle-core = "0.3"
# candle-nn = "0.3"
# candle-transformers = "0.3"
tokenizers = "0.15"

# Database and storage
sled = "0.34"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Compression and encoding
flate2 = "1.0"
base64 = "0.21"

# MCP Integration
# NOTE: transmutation temporarily disabled - requires vcpkg for leptonica-sys
# Will be enabled when needed for memory-service document conversion
# semantic-compressor = { path = "../lesstokens-main/semantic-compressor" }
# transmutation = { path = "../transmutation-main", features = ["office", "image-ocr", "audio"] }

# Testing
mockall = "0.12"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true

# Benchmark profile
[profile.bench]
opt-level = 3
debug = false
lto = true
