[package]
name = "infra-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Infra Runtime - Service orchestration and observability"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }








