[package]
name = "memory-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Memory Service - Long-term memory with Hive stack integration"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
# NOTE: transmutation temporarily disabled - requires vcpkg for leptonica-sys
# transmutation = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }



