[package]
name = "rules5e-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rules5e Service - Deterministic D&D 5e rules engine"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }








