[package]
name = "tts-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TTS Service - Text-to-Speech synthesis using XTTS with voice embeddings and real-time streaming"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
cpal = { workspace = true }
hound = { workspace = true }
rubato = { workspace = true }
futures = "0.3"
rand = "0.8"
serde_yaml = "0.9"

[[bin]]
name = "tts-server"
path = "src/bin/tts-server.rs"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
futures = "0.3"  # For stream testing in XTTS tests








